fixing article h1 over-spacing

--- a/posts/postStyle.css
+++ b/posts/postStyle.css
@@ -28,3 +28,7 @@
 #ArticleContainer>*>a:hover {
   color: #bf382f;
 }
+
+#ArticleContainer h1 {
+  font-size: unset;
+}
